# metamodels

./: .gitignore  .gitmodules  Gemfile  README.md  _config.yaml  agent.json  algorithm-extension.json  algorithm-extension.shacl.ttl  behaviour.json  datasets.json  dependencies.json  environment.json  index.md  metadata.json  motion-spec-refactor-guide.md  namespace-extensions.md  prov.json  prov.shacl.ttl  pyproject.toml  qudt.json  requirements-dev.txt  requirements.txt  snapshot.json  snapshot.shacl.ttl  task.json  time.json  time.shacl.ttl
acceptance-criteria/: bdd-shape-constraints.ttl  bdd.json
behaviour/: behaviour-tree.json  dataflow.json  event_loop.json  event_loop.shacl.ttl  fsm.json  fsm.shacl.ttl
control/: computation.json  computation.shacl.ttl  controller.json  controller.shacl.ttl  supervision.json  supervision.shacl.ttl  system.json  system.shacl.ttl
coordination/: behaviour-tree.json  event.json
examples/: create_bt_with_events.py  generate_bdd_specs.py
floor-plan/: floor-plan.json  object.json  plugin.json  state.json
floorplan/: floorplan.json  object.json  state.json
geometry/: coordinate-extension.json  coordinates.json  coordinates.shacl.ttl  geometry.shacl.ttl  path.json  path.shacl.ttl  polytope.json  polytope.shacl.ttl  pose-difference-extension.json  pose-difference-extension.shacl.ttl  spatial-operators-extension.json  spatial-operators-extension.shacl.ttl  spatial-operators.shacl.ttl  spatial-relations-extension.json  spatial-relations-extension.shacl.ttl  structural-entities.json
kinematic-chain/: structural-entities.json  (+2 more)
(+132 files in other folders)
