[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bdd_dsl"
version = "0.0.1"
authors = [
    { name="Minh Nguyen", email="minh@mail.minhnh.com" }
]
description = """
A Domain-Specific Language (DSL) to showcase the Behaviour-Driven Development (BDD) meta-model,
realized using the JSON-LD format. Developed in context of the SESAME project.
"""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
  'rdflib',
  'pyld'
]

[project.urls]
"Homepage" = "https://github.com/minhnh/bdd-dsl"
"SESAME Project" = "https://www.sesame-project.org/"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
